--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,8 +15,24 @@ spec:
         app: watson-speech-to-text-backend
     spec:
       containers:
+        # - env:
+        #   - name: SPEECH_TO_TEXT_AUTH_TYPE
+        #     valueFrom:
+        #       secretKeyRef:
+        #         name: watson-speech-to-text-backend-api-key
+        #         key: SPEECH_TO_TEXT_AUTH_TYPE
+        #   - name: SPEECH_TO_TEXT_APIKEY
+        #     valueFrom:
+        #       secretKeyRef:
+        #         name: watson-speech-to-text-backend-api-key
+        #         key: SPEECH_TO_TEXT_APIKEY
+        #   - name: SPEECH_TO_TEXT_URL
+        #     valueFrom:
+        #       secretKeyRef:
+        #         name: watson-speech-to-text-backend-api-key
+        #         key: SPEECH_TO_TEXT_URL
         - name: watson-speech-to-text-backend
-          image: quay.io/wataru_nishiki1_ibm/watson-speech-to-text-backend:0.1.0
+          image: quay.io/wataru_nishiki1_ibm/watson-speech-to-text-backend:latest
           imagePullPolicy: Always
           ports:
             - name: http-listener
