--- a/tekton/watson-speech-to-text-backend-pipeline.yaml
+++ b/tekton/watson-speech-to-text-backend-pipeline.yaml
@@ -64,8 +64,8 @@ spec:
           workspace: pipeline-shared-data
       params:
         - name: IMAGE
-          value: "$(params.image-repo):latest"
-          # value: "$(params.image-repo):$(tasks.clone-repository.results.commit)"
+          # value: "$(params.image-repo):latest"
+          value: "$(params.image-repo):$(tasks.clone-repository.results.commit)"
     - name: kustomize-build
       runAfter:
         - build-image
@@ -77,8 +77,8 @@ spec:
           workspace: pipeline-shared-data
       params:
         - name: image-with-tag
-          value: "quay.io/wataru_nishiki1_ibm/watson-speech-to-text-backend=$(params.image-repo):latest"
-          # value: "quay.io/wataru_nishiki1_ibm/watson-speech-to-text-backend=$(params.image-repo):$(tasks.clone-repository.results.commit)"
+          # value: "quay.io/wataru_nishiki1_ibm/watson-speech-to-text-backend=$(params.image-repo):latest"
+          value: "quay.io/wataru_nishiki1_ibm/watson-speech-to-text-backend=$(params.image-repo):$(tasks.clone-repository.results.commit)"
     - name: test-deploy
       runAfter:
         - kustomize-build
