--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,28 +15,28 @@ spec:
         app: watson-speech-to-text-backend
     spec:
       containers:
-        # - env:
-        #   - name: SPEECH_TO_TEXT_AUTH_TYPE
-        #     valueFrom:
-        #       secretKeyRef:
-        #         name: watson-speech-to-text-backend-api-key
-        #         key: SPEECH_TO_TEXT_AUTH_TYPE
-        #   - name: SPEECH_TO_TEXT_APIKEY
-        #     valueFrom:
-        #       secretKeyRef:
-        #         name: watson-speech-to-text-backend-api-key
-        #         key: SPEECH_TO_TEXT_APIKEY
-        #   - name: SPEECH_TO_TEXT_URL
-        #     valueFrom:
-        #       secretKeyRef:
-        #         name: watson-speech-to-text-backend-api-key
-        #         key: SPEECH_TO_TEXT_URL
         - name: watson-speech-to-text-backend
           image: quay.io/wataru_nishiki1_ibm/watson-speech-to-text-backend:latest
           imagePullPolicy: Always
           ports:
             - name: http-listener
               containerPort: 8000
+        - env:
+          - name: SPEECH_TO_TEXT_AUTH_TYPE
+            valueFrom:
+              secretKeyRef:
+                name: watson-speech-to-text-backend-api-key
+                key: SPEECH_TO_TEXT_AUTH_TYPE
+          - name: SPEECH_TO_TEXT_APIKEY
+            valueFrom:
+              secretKeyRef:
+                name: watson-speech-to-text-backend-api-key
+                key: SPEECH_TO_TEXT_APIKEY
+          - name: SPEECH_TO_TEXT_URL
+            valueFrom:
+              secretKeyRef:
+                name: watson-speech-to-text-backend-api-key
+                key: SPEECH_TO_TEXT_URL
           # livenessProbe:
           #   httpGet:
           #     path: /
